--- a/bosco_leaflet/index.html
+++ b/bosco_leaflet/index.html
@@ -345,8 +345,10 @@
         const ll = marker.getLatLng();
         const z = Math.max(map.getZoom(), 20);
         map.setView(ll, z, { animate: true });
-        const offsetY = Math.round(map.getSize().y * 0.25);
-        map.panBy([0, -offsetY], { animate: true });
+        const offsetY = Math.round(map.getSize().y * 0.40);
+        requestAnimationFrame(() => {
+          map.panBy([0, -offsetY], { animate: true });
+        });
       }
     }
 
