--- a/bosco_leaflet/index.html
+++ b/bosco_leaflet/index.html
@@ -89,11 +89,16 @@
 
     /* Evidenzia il marker selezionato (desktop + mobile) */
     .marker-selected {
-      filter:
-        brightness(0.65) saturate(1.4) contrast(1.1)
-        drop-shadow(0 0 6px rgba(0,0,0,.35));
+      /* stesso colore dell’icona, SOLO più luminoso visivamente */
+      filter: brightness(1.15) saturate(1.0) contrast(1.0);
       transform: scale(1.12);
       transform-origin: bottom center;
+
+      /* alone chiaro morbido, senza scurire */
+      box-shadow:
+        0 0 10px rgba(255,255,255,0.65),
+        0 0 18px rgba(224,149,186,0.45);
+      border-radius: 50%;
     }
 
 
