--- a/bosco_leaflet/index.html
+++ b/bosco_leaflet/index.html
@@ -265,6 +265,7 @@
 
     // Foto fiori per specie (cartella: ./img/)
     const specieImages = {
+
       'Prunus serrulata “Amanogawa”': './img/prunus_amanogawa.jpg',
       'Prunus serrulata “Kanzan”': './img/prunus_kanzan.jpg',
       'Prunus serrulata “Shiro-fugen”': './img/prunus_shirofugen.jpg',
@@ -281,6 +282,8 @@
       'Malus "Red Sentinel"': './img/malus_red_sentinel.jpg',
       'Malus "Scarlet"': './img/malus_scarlet.jpg',
       'Malus "Evereste"': './img/malus_evereste.jpg',
+      'Magnolia x soulangeana': './img/magnolia_soulangeana.jpg',
+      'Malus "Profusion"': './img/malus_profusion.jpg',
       'Malus "John Downie"': './img/malus_john_downie.jpg',
       'Malus trilobata': './img/malus_trilobata.jpg',
       'Malus x purpurea': './img/malus_floribunda.jpg'
